# HCAIOPS

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pytest.ini
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/hcai_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sample_data/: metrics.csv  prometheus_dump.txt  windows_logs.txt
backend/scripts/: train_from_excel.py
backend/storage/: events.db
backend/tests/: test_agent.py  test_agent_end_to_end.py  test_agent_update_flow.py  test_agent_update_manager.py  test_agent_version.py  test_analytics.py  test_assets.py  test_automation.py  test_config.py  test_data.py  test_env_config.py  test_integrations_cloudflare.py  test_integrations_docker.py  test_integrations_jobs.py  test_loadgen.py  test_metric_threshold_detector.py  test_monitoring_pipeline.py  test_storage.py  test_stress.py
backend/web/: agents.html  alerts.html  asset_detail.html  assets.html  dashboard.html  dashboard.js  docs.html  index.html  legacy.html  logs.html  logs.js  metrics.html  nav.js  style.css  timeline.html  train.html
hcai_ops_agent/: config.py  heartbeat.py  main.py  metrics.py  pyproject.toml  sender.py
hcai_ops_agent/hcai_ops_agent/: __init__.py  config.py  logs.py  main.py  system_info.py
hcai_ops_agent/hcai_ops_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hcai_ops_agent/tests/: test_agent_config.py  test_agent_heartbeat.py  test_agent_integration.py  test_agent_logs.py  test_agent_metrics.py  test_agent_sender.py  (+1 more)
(+168 files in other folders)
