[project]
name = "hcai_ops"
version = "0.1.0"
description = "Human-Centered AI Operations Framework"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "pydantic",
    "joblib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hcai_ops"]
