[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcai_ops_agent"
version = "0.1.0"
description = "Lightweight HCAI OPS agent"
requires-python = ">=3.10"
dependencies = [
  "httpx",
  "hcai_ops"  # for shared schemas
]

[tool.setuptools]
packages = ["hcai_ops_agent"]
package-dir = {"" = "."}
